# Medical-Triage

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
